--- a/CHANGES
+++ b/CHANGES
@@ -4,3 +4,4 @@ July 2009
 ================================================================================
  + Set the Z Machine Spec version header
  + The optimised storew opcode would not correctly account for negative addresses.
+ + Inlined the ge_varcode_set() call in ge_func_return()
