+ Added IFF.write()

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,9 @@
 Change log started July 2009.
 
+September 2009
+================================================================================
+ + Added IFF.write()
+
 July 2009
 ================================================================================
  + Set the Z Machine Spec version header
