+ Added a Quetzal class.

--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,7 @@ Change log started July 2009.
 September 2009
 ================================================================================
  + Added IFF.write()
+ + Added a Quetzal class.
 
 July 2009
 ================================================================================
