+ ge_saveGame() now uses the Quetzal class.

--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,7 @@ September 2009
 ================================================================================
  + Added IFF.write()
  + Added a Quetzal class.
+ + ge_saveGame() now uses the Quetzal class.
 
 July 2009
 ================================================================================
