--- a/CHANGES
+++ b/CHANGES
@@ -5,6 +5,7 @@ September 2009
  + Added IFF.write()
  + Added a Quetzal class.
  + ge_saveGame() now uses the Quetzal class.
+ + ge_loadSavedGame() uses the Quetzal class too.
 
 July 2009
 ================================================================================
