--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,7 @@ Change log started July 2009.
 March 2010
 ================================================================================
  + Zarf made many changes to remove signed data from the memory, and correct for overflows etc.
+ + Fix a typo in @catch.
 
 February 2010
 ================================================================================
