--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,7 @@ March 2010
 ================================================================================
  + Zarf made many changes to remove signed data from the memory, and correct for overflows etc.
  + Fix a typo in @catch.
+ + Fixed many references to the variable engine which should have been referencing this.
 
 February 2010
 ================================================================================
