--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,9 @@
 Change log started July 2009.
 
+April 2010
+================================================================================
+Fixed undo support, now with multi-undo support.
+
 March 2010
 ================================================================================
  + Zarf made many changes to remove signed data from the memory, and correct for overflows etc.
