Added support for the Z-Machine 1.2 @gestalt opcode (but disabled until full 1.1 support has been added.) Added a test for @gestalt to Praxix

--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,7 @@ Change log started July 2009.
 August 2010
 ================================================================================
 Complies with the Z-Machine 1.1 updates/clarifications.
+Added support for the Z-Machine 1.2 @gestalt opcode (but disabled until full 1.1 support has been added.)
 
 April 2010
 ================================================================================
